# swebench-debugger

./: README.md  package-lock.json  package.json  pnpm-lock.yaml  rsbuild.config.ts  tailwind.config.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: BuildSection.tsx  RepositoryForm.tsx  Tab.tsx  TestSection.tsx
